--- a/src/app/Components/toolbar/toolbar.component.html
+++ b/src/app/Components/toolbar/toolbar.component.html
@@ -1,3 +1,5 @@
-<p>
-  toolbar works!
-</p>
+<nav class="navbar navbar-light bg-light">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="#">Navbar</a>
+  </div>
+</nav>
