Home page work in progress.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="/assets/style.css">
+  <title>Home</title>
 </head>
 <body>
-  This is the HOME PAGE.
+  <div class="header">
+    <a href="/">Home</a>
+    <a href="/contacts">Contact</a>
+    <a href="/about">About</a>
+  </div>
+  <div class="container">
+    <div class="section lam"> 
+      <div class="title">
+        <span>
+          <b>Hello</b>, my name is <b>Stanimir Monev</b>
+        </span>
+        <span>
+          and I'm a <b>software developer</b>.
+        </span>
+      </div>
+    </div>
+    <div class="section projects" > Projects </div>
+    <div class="section news" > News </div>
+  </div>
+  <div class="footer">
+    Copyright © 2022 Stanimir Monev
+  </div>
 </body>
 </html>
