--- a/views/partials/welcome.ejs
+++ b/views/partials/welcome.ejs
@@ -3,5 +3,5 @@
 </div>
 
 <div>
-  <h1 id="welcome">Welcome</h1>
+  <%- include('downloadButton', {id:'downloadButton', css:'download-button to-load hidden', text:'DOWNLOAD RESUME'}); %>
 </div>
