--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,6 +1,7 @@
 html {
   width: 100%;
   height: 100%;
+  background: black;
 }
 
 body {
@@ -9,7 +10,7 @@ body {
   margin: 0;
 }
 
-.container {
+.main-container {
   background: #000000;
   height: inherit;
   margin: 0 auto;
@@ -45,7 +46,6 @@ body {
 footer {
   bottom: 0;
   width: 100%;
-  position: absolute;
   margin: auto;
   padding: 20px 0;
   background: transparent;
@@ -69,9 +69,6 @@ footer {
 }
 
 .typewriter {
-  width: fit-content;
-  margin: auto;
-  color: green;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -94,20 +91,24 @@ footer {
 
 nav.navbar {
   display: flex;
-  justify-content: center;
   align-items: center;
-  background-color: transparent;
+  float: left;
+  flex-direction: column;
+  position: fixed;
+  height: 100%;
+  background: #222;
+  text-align: center;
+  z-index: 1;
 }
 
 nav.navbar ul.navbar-list {
-  display: flex;
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
 nav.navbar li.nav-item {
-  margin: 0 10px;
+  margin: 24px 12px;
 }
 
 nav.navbar li.nav-item a {
@@ -117,23 +118,94 @@ nav.navbar li.nav-item a {
 }
 
 .to-load {
-  transition: all 0.5s ease-in-out;
+  transition: opacity 0.75s ease-in-out;
 }
 
-#welcome.hidden {
+.download-button.hidden {
   opacity: 0;
 }
 
-#welcome.visible {
+.download-button.visible {
   opacity: 1;
 }
 
-.section .container {
+.section .section-container {
   height: fit-content;
   margin: 0;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+
+.section .section-container div {
+  width: fit-content;
+  margin: auto;
+  color: green;
+}
+
+.download-button {
+  margin-top: 100px;
+  padding: 20px 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #136913;
+  font-family: 'Courier New', Courier, monospace;
+  color:white;
+  letter-spacing: 5px;
+  cursor: pointer;
+}
+
+.download-button:hover {
+  background-color: #0d440d;
+}
+
+.download-button .icon {
+  vertical-align: bottom;
+}
+
+.download-button-menu {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #136913;
+  font-family: 'Courier New', Courier, monospace;
+  color:white;
+  letter-spacing: 5px;
+  cursor: pointer;
+}
+
+/* Tooltip text */
+.tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  opacity: 0;
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+  top: 180px;
+  left: 75px;
+}
+
+.tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 100%;
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent #555 transparent transparent;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.download-button-menu:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
 }
