--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,14 +18,19 @@
       <%- include('partials/header'); %>
     </header>
     <main>
-      <div class="section">
+      <div id="home" class="section">
         <div class="section-container">
           <%- include('partials/welcome'); %>
         </div>
       </div>
-      <div class="section">
+      <div id="about" class="section">
         <div class="section-container">
           <%- include('partials/about'); %>
+        </div>
+      </div>
+      <div id="contact" class="section">
+        <div class="section-container">
+          <%- include('partials/contact'); %>
         </div>
       </div>
     </main>
