--- a/views/partials/welcome.ejs
+++ b/views/partials/welcome.ejs
@@ -1,3 +1,7 @@
+<div>
+  <img class="main_logo" src="/assets/smworks_logo.png" alt="smworks_logo">
+</div>
+
 <div class="typewriter">
   <span class="wrap"></span>
 </div>
