--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -2,6 +2,7 @@ html {
   width: 100%;
   height: 100%;
   background: black;
+  font-family: "roboto_monoregular", monospace;
 }
 
 body {
@@ -64,7 +65,6 @@ footer {
 
 .title {
   text-align: center;
-  font-family: monospace;
   color: green;
 }
 
@@ -73,7 +73,6 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: monospace;
   font-size: 200%;
 }
 
@@ -189,13 +188,14 @@ nav.navbar li.nav-item:not(:last-child):not(:first-child):hover {
   background-color: #555;
   color: #fff;
   text-align: center;
-  padding: 15px 10px;
+  padding: 10px 0;
+  margin: 0 5px;
   border-radius: 6px;
   opacity: 0;
   /* Position the tooltip text - see examples below! */
   position: fixed;
   z-index: 1;
-  top: 360px;
+  top: 380px;
   left: 85px;
 }
 
@@ -224,4 +224,69 @@ nav.navbar li.nav-item:not(:last-child):not(:first-child):hover {
 .header_logo {
   width: 120px;
   margin-top: 24px;
+}
+
+.contact-container form {
+  background-color: black;
+  color: green;
+  padding: 20px;
+}
+
+.contact-container input, .contact-container textarea {
+  background-color: green;
+  color: black;
+  padding: 10px;
+  width: 100%;
+  margin-bottom: 20px;
+  resize: vertical;
+  border-width: 2px;
+  border-style: inset;
+  border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
+}
+
+.contact-container input::placeholder, .contact-container textarea::placeholder {
+  color: black;
+  opacity: 0.5;
+}
+
+.contact-container input:focus-visible, .contact-container textarea:focus-visible {
+  outline-color: #b2b2b2;
+  outline-offset: -2px;
+  outline-width: medium;
+  outline-style: groove;
+}
+
+.contact-container textarea {
+  height: 200px;
+}
+
+.contact-container input[type="submit"] {
+  background-color: black;
+  color: green;
+  font-weight: bold;
+  cursor: pointer;
+  border: 3px solid green;
+  border-radius: 5px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.contact-container input[type="submit"]:hover {
+  background-color: green;
+  color: black;
+}
+
+.section .section-container div.contact-container {
+  width: 750px;
+}
+
+.contact-container form label {
+  font-size: larger;
+}
+
+.section .section-container .contact-container .response-container {
+  width: auto;
+  margin: 20px;
 }
