Changed site layout

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,19 +1,5 @@
-<nav id="mainNavbar" class="navbar">
-	<ul class="navbar-list">
-		<li class="nav-item">
-			<img class="header_logo" src="/assets/smworks_logo.png" alt="smworks_logo">
-		</li>
-		<li class="nav-item">
-			<a href="#home">Home</a>
-		</li>
-		<li class="nav-item">
-			<a href="#about">About</a>
-		</li>
-		<li class="nav-item">
-			<a href="#contact">Contact</a>
-		</li>
-		<li class="nav-item">
-			<%- include('downloadButton', {id:'downloadButtonMenu', css:'download-button-menu to-load', tooltiptext:'Download Resume'}) %>
-		</li>
-	</ul>
-</nav>
+<div id="mainNavbar" class="navbar">
+	<a href="#home">Home</a>
+	<a href="#about">About</a>
+	<a href="#contact">Contact</a>
+</div>
