--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,18 +1,28 @@
+:root {
+  --background: rgb(30, 30, 30);
+  --font_family: "roboto_monoregular", monospace;
+  --site-green: rgb(10, 160, 10);
+}
+
 html {
   width: 100%;
   height: 100%;
-  background: black;
-  font-family: "roboto_monoregular", monospace;
+  background: var(--background);
+  font-family: var(--font_family);
 }
 
 body {
   width: 100%;
   height: 100%;
   margin: 0;
+  background-color: var(--background) !important;
+}
+
+main {
+  margin-top: 100px;
 }
 
 .main-container {
-  background: #000000;
   height: inherit;
   margin: 0 auto;
 }
@@ -21,12 +31,7 @@ body {
   top: 0;
   position: fixed;
   width: 100%;
-  background-color: rgb(49, 48, 48);
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  background-color: var(--background);
 }
 
 .header>a {
@@ -37,7 +42,7 @@ body {
 }
 
 .header>a:hover {
-  background: #53544f;
+  background: var(--background);
 }
 
 .header>a:link {
@@ -51,7 +56,7 @@ footer {
   padding: 20px 0;
   background: transparent;
   text-align: center;
-  color: green;
+  color: var(--site-green);
 }
 
 .section {
@@ -65,7 +70,7 @@ footer {
 
 .title {
   text-align: center;
-  color: green;
+  color: var(--site-green);
 }
 
 .typewriter {
@@ -74,6 +79,7 @@ footer {
   justify-content: center;
   align-items: center;
   font-size: 200%;
+  font-family: var(--font_family);
 }
 
 .typewriter>.wrap {
@@ -84,42 +90,35 @@ footer {
 
 @keyframes blink {
   50% {
-    border-color: black;
+    border-color: var(--font_family);
   }
 }
 
-nav.navbar {
+.main-container
+.navbar {
   display: flex;
-  align-items: center;
-  float: left;
-  flex-direction: column;
-  position: fixed;
-  height: 100%;
-  background: #222;
-  text-align: center;
+  width: 100%;
+  background: var(--background);
   z-index: 1;
+  justify-content: end;
+  position: fixed;
+  top: 0;
+  padding: 0.75em 2em;
 }
 
-nav.navbar ul.navbar-list {
+.navbar a {
   list-style: none;
   margin: 0;
   padding: 0;
-}
-
-nav.navbar li.nav-item:last-child {
-  padding: 24px 0;
-}
-
-nav.navbar li.nav-item a {
   display: block;
   font-size: x-large;
-  color: darkgreen;
+  color: var(--site-green);
   text-decoration: none;
-  padding: 24px 12px;
+  padding: 0 12px;
 }
 
-nav.navbar li.nav-item:not(:last-child):not(:first-child):hover {
-  background: #000000;
+.navbar a:hover {
+  background: var(--background);
   color: lightgreen;
 }
 
@@ -148,23 +147,25 @@ nav.navbar li.nav-item:not(:last-child):not(:first-child):hover {
 .section .section-container div {
   width: fit-content;
   margin: auto;
-  color: green;
+  color: var(--site-green);
 }
 
 .download-button {
   margin-top: 100px;
   padding: 20px 10px;
-  border: none;
+  border-style: dashed;
   border-radius: 5px;
-  background-color: #136913;
+  background-color: var(--background);
+  border-color: var(--site-green);
   font-family: 'Verdana', Courier, monospace;
-  color:white;
+  color:var(--site-green);
   letter-spacing: 5px;
   cursor: pointer;
 }
 
 .download-button:hover, .download-button-menu:hover {
-  background-color: #0d440d;
+  background-color: var(--site-green);
+  color: var(--background);
 }
 
 .download-button .icon {
@@ -177,8 +178,9 @@ nav.navbar li.nav-item:not(:last-child):not(:first-child):hover {
   border-radius: 5px;
   background-color: #136913;
   font-family: 'Verdana', Courier, monospace;
-  color:white;
+  color: var(--background);
   cursor: pointer;
+  margin-left: 10px;
 }
 
 /* Tooltip text */
@@ -226,67 +228,69 @@ nav.navbar li.nav-item:not(:last-child):not(:first-child):hover {
   margin-top: 24px;
 }
 
-.contact-container form {
-  background-color: black;
-  color: green;
-  padding: 20px;
+.contact-container .form-control:not(#sendEmailBtn) {
+  background-color: var(--background);
+  border-color: var(--site-green);
 }
 
-.contact-container input, .contact-container textarea {
-  background-color: green;
-  color: black;
-  padding: 10px;
-  width: 100%;
-  margin-bottom: 20px;
-  resize: vertical;
-  border-width: 2px;
-  border-style: inset;
-  border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
-}
-
-.contact-container input::placeholder, .contact-container textarea::placeholder {
-  color: black;
-  opacity: 0.5;
-}
-
-.contact-container input:focus-visible, .contact-container textarea:focus-visible {
-  outline-color: #b2b2b2;
-  outline-offset: -2px;
-  outline-width: medium;
-  outline-style: groove;
-}
-
-.contact-container textarea {
+.contact-container #message {
   height: 200px;
+  width: 100%;
 }
 
-.contact-container input[type="submit"] {
-  background-color: black;
-  color: green;
-  font-weight: bold;
-  cursor: pointer;
-  border: 3px solid green;
-  border-radius: 5px;
+.contact-container form {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 15px;
 }
 
-* {
-  box-sizing: border-box;
+.section .contact-container .response-container {
+  margin: 15px 0;
+  font-size: 75px;
+  font-weight: bolder;
 }
 
-.contact-container input[type="submit"]:hover {
-  background-color: green;
-  color: black;
+.contact-container div input::placeholder, 
+.contact-container div textarea::placeholder,
+.contact-container form div input,
+.contact-container form div textarea,
+.contact-container form div input:focus,
+.contact-container form div textarea:focus  {
+  color: var(--site-green);
 }
 
-.section .section-container div.contact-container {
-  width: 750px;
+.contact-container form div input:focus,
+.contact-container form div textarea:focus  {
+  box-shadow: 0 0 0 0.1rem rgb(35, 70, 35)
 }
 
-.contact-container form label {
-  font-size: larger;
+#nameContainer, #emailContainer {
+  flex: 1 1 0;
 }
 
-.section .section-container .contact-container .response-container {
-  width: auto;
-  margin: 20px;
+#messageContainer {
+  order: 3;
+  flex: 100%
+}
+
+#sendEmailBtn {
+  width: 200px;
+  margin-top: 15px;
+  border-color: var(--site-green);
+  background-color: var(--background);
+  transition: background-color .3s ease-in-out,color .3s ease-in-out;
+}
+
+#sendEmailBtn:hover {
+  width: 200px;
+  margin-top: 15px;
+  border-color: var(--site-green);
+  background-color: var(--site-green);
+  color: var(--background);
+  transition: background-color .3s ease-in-out,color .3s ease-in-out;
+}
+
+#home, #about, #contact {
+  scroll-margin-top: 100px;
 }
