--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/font.css">
   <link rel="stylesheet" type="text/css" href="/assets/style.css">
   <link rel="stylesheet" type="text/css" href="/assets/typewriter.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="/assets/index.js"></script>
   <script src="/assets/typewriter.js"></script>
   <title>Home</title>
@@ -15,9 +16,7 @@
 
 <body>
   <div class="main-container">
-    <header>
-      <%- include('partials/header'); %>
-    </header>
+    <%- include('partials/header'); %>
     <main>
       <div id="home" class="section">
         <div class="section-container">
