--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -1,14 +1,17 @@
 <div class="contact-container">
   <div class="response-container">
-    <span class="response">If you want to get in contact with me:</span>
+    <span class="response">Contact</span>
   </div>
   <form action="/contact" method="post">
-    <label for="name">Name:</label><br>
-    <input type="text" id="name" name="name" placeholder="Your full name..."><br>
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" placeholder="Your email..."><br>
-    <label for="message">Message:</label><br>
-    <textarea id="message" name="message" placeholder="Your message..."></textarea><br>
-    <input id="sendEmailBtn" type="submit" value="Submit">
+    <div id="nameContainer">
+      <input type="text" class="form-control" id="name" name="name" placeholder="Your Full Name">
+    </div>
+    <div id="emailContainer">
+      <input type="email" class="form-control" id="email" name="email" placeholder="Your Email">
+    </div>
+    <div id="messageContainer">
+      <textarea id="message" class="form-control" name="message" placeholder="Your Message"></textarea>
+      <input id="sendEmailBtn" class="form-control" type="submit" value="Submit">
+    </div>
   </form> 
 </div>
