--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -157,11 +157,14 @@ footer {
   color:var(--site-green);
   letter-spacing: 5px;
   cursor: pointer;
+  transition: background-color .3s ease-in-out,color .3s ease-in-out;
+  transition: opacity 1s ease-in-out;
 }
 
 .download-button:hover, .download-button-menu:hover {
   background-color: var(--site-green);
   color: var(--background);
+  transition: background-color .3s ease-in-out,color .3s ease-in-out;
 }
 
 .download-button .icon {
@@ -233,6 +236,7 @@ footer {
 .contact-container #message {
   height: 200px;
   width: 100%;
+  max-height: 700px;
 }
 
 .contact-container form {
@@ -297,4 +301,8 @@ input:-webkit-autofill:active{
   background-color: var(--site-green);
   color: var(--background);
   transition: background-color .3s ease-in-out,color .3s ease-in-out;
+}
+
+#home, #about, #contact {
+  height: 1000px;
 }
