--- a/views/partials/welcome.ejs
+++ b/views/partials/welcome.ejs
@@ -6,6 +6,6 @@
   <span class="wrap"></span>
 </div>
 
-<div>
+<div class="download-button-container">
   <%- include('downloadButton', {id:'downloadButton', css:'download-button to-load hidden', text:'DOWNLOAD RESUME'}); %>
 </div>
