--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -2,15 +2,26 @@
   <div class="response-container">
     <span class="response">Contact</span>
   </div>
-  <form action="/contact" method="post">
-    <div id="nameContainer">
-      <input type="text" class="form-control" id="name" name="name" placeholder="Your Full Name">
+  <form id="sendEmailForm" action="/contact" method="post">
+    <div id="nameContainer" class="form-container">
+      <input type="text" class="form-control" id="name" name="name">
+      <label for="name">Your Full Name</label>
+      <div class="error-message hidden"></div>
     </div>
-    <div id="emailContainer">
-      <input type="email" class="form-control" id="email" name="email" placeholder="Your Email">
+    <div id="emailContainer" class="form-container">
+      <input type="email" class="form-control" id="email" name="email">
+      <label for="email">Your Email</label>
+      <div class="error-message hidden"></div>
     </div>
-    <div id="messageContainer">
-      <textarea id="message" class="form-control" name="message" placeholder="Your Message"></textarea>
+    <div id="messageContainer" class="form-container">
+      <div id="subjectContainer" class="form-container">
+        <input type="text" class="form-control" id="subject" name="subject">
+        <label for="subject">Subject of the email</label>
+        <div class="error-message hidden"></div>
+      </div>
+      <textarea id="message" class="form-control" name="message"></textarea>
+      <label for="message">Your Message</label>
+      <div class="error-message hidden"></div>
       <input id="sendEmailBtn" class="form-control" type="submit" value="Submit">
     </div>
   </form> 
