Complete make-over of the site.

--- a/views/partials/welcome.ejs
+++ b/views/partials/welcome.ejs
@@ -1,11 +1,10 @@
-<div>
-  <img class="main_logo" src="/assets/smworks_logo.png" alt="smworks_logo">
+<div class="content-container">
+  <div class="text-container">
+    <div class="title-text">Hey There, <br> My Name Is <span>Stanimir Monev</span></div>
+    <div class="typewriter-container">And I'm Into <div class="typewriter"><span class="wrap"></span></div></div>
+  </div>
 </div>
 
-<div class="typewriter">
-  <span class="wrap"></span>
-</div>
-
-<div class="download-button-container">
-  <%- include('downloadButton', {id:'downloadButton', css:'download-button to-load hidden', text:'DOWNLOAD RESUME'}); %>
+<div class="image-container">
+  <img class="greetings-avatar" src="/assets/images/greetings_avatar.png" alt="greetings_avatar">
 </div>
