--- a/views/partials/downloadButton.ejs
+++ b/views/partials/downloadButton.ejs
@@ -1,6 +1,6 @@
 <a id="<%= id %>" class="<%= css %>" href="/assets/CV_Stanimir_Monev.pdf" download="CV_Stanimir_Monev.pdf">
-  <!-- <svg width="20px" height="20px" viewBox="0 0 64 64" class="icon" xmlns="http://www.w3.org/2000/svg" stroke-width="3" stroke="#fff" fill="none"><path d="M53.5,34.06V53.33a2.11,2.11,0,0,1-2.12,2.09H12.62a2.11,2.11,0,0,1-2.12-2.09V34.06"/><polyline points="42.61 35.79 32 46.39 21.39 35.79"/><line x1="32" y1="46.39" x2="32" y2="7.5"/></svg>
-  --> <% if (typeof text == 'string' && text) { %>
+ <svg viewBox="0 0 64 64" class="icon" xmlns="http://www.w3.org/2000/svg"><path d="M53.5,34.06V53.33a2.11,2.11,0,0,1-2.12,2.09H12.62a2.11,2.11,0,0,1-2.12-2.09V34.06"/><polyline points="42.61 35.79 32 46.39 21.39 35.79"/><line x1="32" y1="46.39" x2="32" y2="7.5"/></svg>
+ <% if (typeof text == 'string' && text) { %>
     <span><%= text %></span>
   <% } %>
 
