--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,10 @@
 <div id="mainNavbar" class="navbar">
-	<a href="#home">Home</a>
-	<a href="#about">About</a>
-	<a href="#contact">Contact</a>
+	<a href="/">
+		<img class="logo" src="/assets/images/smworks_logo_cropped.png" alt="logo">
+	</a>
+	<div class="links">
+		<a href="#home">Home</a>
+		<a href="#about">About</a>
+		<a href="#contact">Contact</a>
+	</div>
 </div>
