--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -15,8 +15,8 @@
     My passion lies in crafting innovative solutions and contributing to the ever-evolving world of software development.
   </p>
 
-  <div><span>Email :</span> stanimir.monev@smworks.info</div>
-  <div><span>Place :</span> Bochum, Germany - 44892</div>
+  <div><span>Email :</span> <a href="mailto:stanimirr.monev@gmail.com">stanimirr.monev@gmail.com</a></div>
+  <div><span>Place :</span> 44892 - Bochum, Germany</div>
 
   <div class="download-button-container">
     <%- include('downloadButton', {id:'downloadButton', css:'download-button', text:'DOWNLOAD RESUME'}); %>
