--- a/views/partials/welcome.ejs
+++ b/views/partials/welcome.ejs
@@ -17,5 +17,7 @@
 </div>
 
 <div class="image-container">
-  <img class="greetings-avatar" src="/assets/images/greetings_avatar.png" alt="greetings_avatar">
+  <a href="https://app.animaker.com/">
+    <img class="greetings-avatar" src="/assets/images/greetings_avatar.png" alt="greetings_avatar">
+  </a>
 </div>
