--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -1,3 +1,4 @@
+<div class="header">About Me</div>
 <div class="image-container">
   <img class="about-me-photo" src="/assets/images/CV_Pic_To_Use.jpeg" alt="about_me_photo">
 </div>
