Fixed the links to open on new tab.

--- a/views/partials/welcome.ejs
+++ b/views/partials/welcome.ejs
@@ -17,7 +17,7 @@
 </div>
 
 <div class="image-container">
-  <a href="https://app.animaker.com/">
+  <a href="https://app.animaker.com/" target="_blank">
     <img class="greetings-avatar" src="/assets/images/greetings_avatar.png" alt="greetings_avatar">
   </a>
 </div>
