--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,21 @@
   <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
   <link rel="stylesheet" type="text/css" href="/assets/css/typewriter.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script
+    src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+    crossorigin="anonymous">
+  </script>
   <script src="/assets/javascript/index.js"></script>
   <script src="/assets/javascript/typewriter.js"></script>
   <title>Home</title>
 </head>
 
 <body>
+  <div>
+    <%- include('partials/messageBox', {css: 'success'}); %>
+    <%- include('partials/messageBox', {css: 'error'}); %>
+  </div>
   <div class="main-container">
     <%- include('partials/header'); %>
     <main>
