--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -16,7 +16,7 @@
     My passion lies in crafting innovative solutions and contributing to the ever-evolving world of software development.
   </p>
 
-  <div><span>Email :</span> <a href="mailto:stanimirr.monev@gmail.com">stanimirr.monev@gmail.com</a></div>
+  <div><span>Email :</span> <a href="mailto:contact@stanimirmonevworks.com">contact@stanimirmonevworks.com</a></div>
   <div><span>Place :</span> 44892 - Bochum, Germany</div>
 
   <div class="download-button-container">
