The matrix is fixed and also some small issues.

--- a/views/partials/welcome.ejs
+++ b/views/partials/welcome.ejs
@@ -1,6 +1,6 @@
 <div class="content-container">
   <div class="text-container">
-    <div class="title-text">Hey There, <br> My Name Is <span>Stanimir Monev</span></div>
+    <div class="title-text">Welcome!<br> My Name Is <span>Stanimir Monev</span></div>
     <div class="typewriter-container">And I'm Into <div class="typewriter"><span class="wrap"></span></div></div>
   </div>
   <div class="about-button-container">
