--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -306,7 +306,7 @@ footer {
   main #about.section .content {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: normal;
     text-align: center;
     margin: 0;
     margin-top: 25px;
