--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -7,7 +7,7 @@
   <h4>Software Developer</h4>
 
   <p>
-    Greetings! I'm a versatile Software Developer currently based in Bochum, Germany 
+    I'm a versatile Software Developer currently based in Bochum, Germany 
     <img src="https://images.emojiterra.com/google/noto-emoji/unicode-15.1/color/svg/1f1e9-1f1ea.svg" alt="Google (Noto Color Emoji - Unicode 15.1)" width="15" height="15">. 
     Originally from Bulgaria
     <img src="https://images.emojiterra.com/google/noto-emoji/unicode-15.1/color/svg/1f1e7-1f1ec.svg" alt="Google (Noto Color Emoji - Unicode 15.1)" width="15" height="15">
