--- a/views/resume_editor.ejs
+++ b/views/resume_editor.ejs
@@ -34,6 +34,8 @@
                 <label for="interests">Interests:</label>
                 <textarea id="interests" name="interests" rows="4" placeholder="List your interests"></textarea>
             </div>
+            
+            <button type="button" id="saveResume">Save Resume</button>
         </div>
         <div class="divider"></div>
         <div id="previewSection" class="preview-section panel right">
