--- a/views/partials/cv/cv_education.ejs
+++ b/views/partials/cv/cv_education.ejs
@@ -1,12 +1,12 @@
 <label for="educationName">Name:</label>
-<input type="text" id="educationName" name="educationName" placeholder="Institution Name">
+<input type="text" id="educationName" name="educationName" placeholder="Institution Name" required>
 
 <label for="educationDescription">Description:</label>
-<textarea id="educationDescription" name="educationDescription" rows="4" placeholder="Describe your education" maxlength="100"></textarea>
+<textarea id="educationDescription" name="educationDescription" rows="4" placeholder="Describe your education" maxlength="100" required></textarea>
 
 <div class="row">
   <label for="educationFrom">From:</label>
-  <input type="date" id="educationFrom" name="educationFrom">
+  <input type="date" id="educationFrom" name="educationFrom" required>
 
   <div class="tooltip">
       <input type="checkbox" id="stillStudying" name="stillStudying">
