--- a/views/partials/cv/cv_work_experience.ejs
+++ b/views/partials/cv/cv_work_experience.ejs
@@ -1,12 +1,12 @@
 <label for="jobTitle">Job Title:</label>
-<input type="text" id="jobTitle" name="jobTitle" placeholder="Job Title">
+<input type="text" id="jobTitle" name="jobTitle" placeholder="Job Title" required>
 
 <label for="jobDescription">Job Description:</label>
-<textarea id="jobDescription" name="jobDescription" rows="4" placeholder="Describe your job" maxlength="100"></textarea>
+<textarea id="jobDescription" name="jobDescription" rows="4" placeholder="Describe your job" maxlength="100" required></textarea>
 
 <div class="row">
   <label for="jobBeginDate">Job Begin Date:</label>
-  <input type="date" id="jobBeginDate" name="jobBeginDate">
+  <input type="date" id="jobBeginDate" name="jobBeginDate" required>
 
   <div class="tooltip">
       <input type="checkbox" id="stillWorking" name="stillWorking">
