--- a/views/partials/cv/cv_general_info.ejs
+++ b/views/partials/cv/cv_general_info.ejs
@@ -1,17 +1,17 @@
 <label for="firstName">First Name:</label>
-<input type="text" id="firstName" name="firstName" placeholder="Your First Name">
+<input type="text" id="firstName" name="firstName" placeholder="Your First Name" required>
 
 <label for="lastName">Last Name:</label>
-<input type="text" id="lastName" name="lastName" placeholder="Your Last Name">
+<input type="text" id="lastName" name="lastName" placeholder="Your Last Name" required>
 
 <label for="town">Town:</label>
-<input type="text" id="town" name="town" placeholder="Your Town">
+<input type="text" id="town" name="town" placeholder="Your Town" required>
 
 <label for="country">Country:</label>
-<input type="text" id="country" name="country" placeholder="Your Country">
+<input type="text" id="country" name="country" placeholder="Your Country" required>
 
 <label for="email">Email:</label>
-<input type="text" id="email" name="email" placeholder="Your Email">
+<input type="text" id="email" name="email" placeholder="Your Email" required>
 
 <label for="linkedin">LinkedIn:</label>
 <input type="text" id="linkedin" name="linkedin" placeholder="Your LinkedIn">
@@ -23,4 +23,4 @@
 <input type="text" id="website" name="website" placeholder="Your Website">
 
 <label for="skills">Skills:</label>
-<textarea id="skills" name="skills" rows="4" placeholder="List your skills"></textarea>
+<textarea id="skills" name="skills" rows="4" placeholder="List your skills" required></textarea>
