--- a/views/partials/cv/cv_projects.ejs
+++ b/views/partials/cv/cv_projects.ejs
@@ -1,8 +1,8 @@
 <label for="projectName">Name:</label>
-<input type="text" id="projectName" name="projectName" placeholder="Project Name">
+<input type="text" id="projectName" name="projectName" placeholder="Project Name" required>
 
 <label for="projectDescription">Description:</label>
-<textarea id="projectDescription" name="projectDescription" rows="4" placeholder="Describe your project"></textarea>
+<textarea id="projectDescription" name="projectDescription" rows="4" placeholder="Describe your project" required></textarea>
 
 <button type="button" id="addProjectButton">Add Project</button>
 
