--- a/views/resume_editor.ejs
+++ b/views/resume_editor.ejs
@@ -44,7 +44,7 @@
         <div id="previewSection" class="preview-section panel right">
             <h2>Preview</h2>
             <div id="preview">
-                <!-- Preview content will be displayed here -->
+                <%- include('partials/cv/cv_preview') %>
             </div>
         </div>
     </div>
