--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -17,11 +17,12 @@
 }
 .login-container input[type="text"],
 .login-container input[type="password"] {
-    width: 100%;
-    padding: 10px;
+    width: 98%;
+    padding: 10px 0;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    padding-left: 5px;
 }
 .login-container button {
     width: 100%;
