--- a/views/resume_editor.ejs
+++ b/views/resume_editor.ejs
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Editor</title>
     <link rel="stylesheet" href="/assets/css/resume.css">
+    <script src="/assets/javascript/api.js"></script>
+    <script src="/assets/javascript/utils.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -39,6 +42,8 @@
             </div>
             
             <button type="button" id="saveResume">Save Resume</button>
+            <button id="downloadPDF">Download as PDF</button>
+
         </div>
         <div class="divider"></div>
         <div id="previewSection" class="preview-section panel right">
@@ -49,7 +54,6 @@
         </div>
     </div>
 
-    
     <script src="/assets/javascript/resume.js"></script>
 </body>
 </html>
