--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -808,3 +808,108 @@ a#copyright:hover {
   margin-right: 10px;
 }
 
+#termsContainer {
+  margin-top: 15px;
+}
+
+#termsContainer label {
+  position: initial;
+  background: transparent;
+}
+
+#termsContainer label a {
+  color: var(--site-green);
+}
+
+/* Modal CSS begin */
+
+@media screen and (max-width: 2500px) {
+  #modal .modal-content {
+      margin-top: 140px;
+  }
+}
+
+#modal {
+  display: none;
+  position: fixed;
+  z-index: 10000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+#modal .modal-content {
+  background-color: var(--background);
+  margin: 5% auto;
+  margin-top: 10%;
+  padding: 20px;
+  border: 2px solid var(--site-green);
+  width: 60%;
+  height: -webkit-fill-available;
+  color: var(--stand-out);
+  font-family: 'Times New Roman', Times, serif;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  overflow: auto;
+}
+
+#modalBody a {
+  color: #03edcf;
+}
+
+#modalBody {
+  color: var(--site-green);
+}
+
+#modalBody h1 {
+  text-align: center;
+  color: var(--stand-out-header);
+  margin-bottom: 30px;
+}
+
+#modalBody h2 {
+  font-style: italic;
+}
+
+#modalCloseTop {
+  text-align: right;
+}
+
+.modal-close {
+  color: var(--stand-out);
+  float: right;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  color: var(--stand-out-header);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#modalBody {
+  padding: 10px 0; 
+}
+
+#modalCloseBottom {
+  background-color: var(--site-green);
+  color: var(--background);
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 20px;
+  border-radius: 5px;
+}
+
+#modalCloseBottom:hover {
+  background-color: var(--stand-out-header);
+}
+
+/* Modal CSS end */
