--- a/views/partials/contact.ejs
+++ b/views/partials/contact.ejs
@@ -22,6 +22,11 @@
       <textarea id="message" class="form-control" name="message"></textarea>
       <label for="message">Your Message</label>
       <div class="error-message hidden"></div>
+      
+      <div id="termsContainer">
+        <label for="terms"><input type="checkbox" id="terms" name="terms"> I accept the <a id="acceptTermsAndConditions" class="modal-link" href="/tac-policy-content">Terms and Conditions</a> and <a id="acceptPrivacyPolicy" class="modal-link" href="/privacy-policy-content">Privacy Policy</a>.</label>
+        <div class="error-message hidden"></div>
+      </div>
       <input id="sendEmailBtn" class="form-control" type="submit" value="Submit">
     </div>
   </form> 
