Deleted the watermark on the admin page.
Also updated the README file and removed some comments.

--- a/views/partials/cv/cv_preview.ejs
+++ b/views/partials/cv/cv_preview.ejs
@@ -8,7 +8,7 @@
         border-radius: 5px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         margin: 0 auto;
-        font-size: 11px; /* Set the font size to 11px */
+        font-size: 11px;
         overflow: hidden;
         position: relative;
     }
