Added favicon and changed title of the website.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="/assets/font.css">
   <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
@@ -16,7 +17,7 @@
   <script src="/assets/javascript/cookies.js"></script>
   <script src="/assets/javascript/index.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
-  <title>Home</title>
+  <title>StanimirMonevWorks Homepage</title>
 </head>
 
 <body>
