--- a/views/resume_editor.ejs
+++ b/views/resume_editor.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Editor</title>
     <link rel="stylesheet" href="/assets/css/resume.css">
