Comments, deleted unneeded files and fixed cookies.

--- a/views/partials/cookiesBanner.ejs
+++ b/views/partials/cookiesBanner.ejs
@@ -7,8 +7,7 @@
     <button id="customizeCookies">Customize</button>
     <div id="cookiePreferences" style="display:none;">
         <p>Select which cookies you want to allow:</p>
-        <label><input type="checkbox" id="essentialCookies" checked disabled> Essential Cookies</label><br>
-        <label><input type="checkbox" id="functionalCookies"> Functional Cookies</label><br>
+        <label><input type="checkbox" id="essentialCookies" checked disabled> Essential / Functional Cookies</label><br>
         <label><input type="checkbox" id="analyticsCookies"> Analytics Cookies</label><br>
         <button id="savePreferences">Save Preferences</button>
     </div>
